Neue Seitenstruktur und Filter

--- a/about.html
+++ b/about.html
@@ -19,21 +19,12 @@
 <body>
   <nav class="navbar navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">BVF</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#">Downloads</a></li>
-          <li class="active"><a href="contact.html">Impressum</a></li>
+          <li><a href="index.html" title="Startseite">BVF</a></li>
+          <li class="active"><a href="index.html" title="Startseite">Downloads</a></li>
+          <li><a href="contact.html">Impressum</a></li>
         </ul>
-        <p class="navbar-text navbar-right"> <a href="gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
+        <p class="navbar-text navbar-right"> <a href="http://www.gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
         </p>
       </div>
     </div><!-- /.container -->
