--- a/contact.html
+++ b/contact.html
@@ -19,21 +19,12 @@
 <body>
   <nav class="navbar navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">BVF</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Downloads</a></li>
-          <li class="active"><a href="contact.html">Impressum</a></li>
+          <li><a href="index.html" title="Startseite">BVF</a></li>
+          <li class="active"><a href="index.html" title="Startseite">Downloads</a></li>
+          <li><a href="contact.html">Impressum</a></li>
         </ul>
-        <p class="navbar-text navbar-right"> <a href="gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
+        <p class="navbar-text navbar-right"> <a href="http://www.gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
         </p>
       </div>
     </div><!-- /.container -->
@@ -47,6 +38,35 @@
 </div>
 <div class="container">
   <h2>Impressum </h2>
+  <div id="content-inner">
+  <br><b>Impressum</b>
+  
+  
+  
+  <br><a id="impressum" name="impressum"></a>
+  
+  <p>GABORS MZ Laden</p>
+  
+  <p> </p>
+  
+  <p>Gabor Pirntke <br>Langhansstr. 134 <br>13086 Berlin</p>
+  <p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE231351542</p>
+  
+  
+  
+  
+  
+  <p>Di.-Fr.: 13:00 - 18:00<br>Tel: 030/96069710<br>Fax: 030/96069382<br> Email: info(et)gabors-mz-laden.de</p>
+  
+  <p>
+  Plattform der EU-Kommission zur Online-Streitbeilegung: <a href="https://www.ec.europa.eu/consumers/odr" target="_blank">www.ec.europa.eu/consumers/odr</a>
+  </p>
+  <p>Wir sind zur Teilnahme an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle weder verpflichtet noch bereit.</p>
+  
+  
+  
+  <div style="display:block; background-color:#FBFBFB; color:#292929; border: 1px solid gray; padding:15px; font-family:Helvetica,Arial,sans-serif; font-size:14px; font-style:normal;"><img style="float:left;margin-right:10px;width:90px;" src="https://www.it-recht-kanzlei.de/gfx/Logos/logo-fairness-160.png"><p style="padding-top:10px;">Mitglied der Initiative "Fairness im Handel".<br>Informationen zur Initiative: <a style="color:#ef7b00" href="http://www.fairness-im-handel.de" target="_blank">fairness-im-handel.de </a></p><div style="clear: both;"></div></div>
+  </div>
   <hr>
 </div><!--/.container-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
