--- a/index.html
+++ b/index.html
@@ -19,21 +19,12 @@
 <body>
   <nav class="navbar navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">BVF</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Downloads</a></li>
+          <li><a href="index.html" title="Startseite">BVF</a></li>
+          <li class="active"><a href="index.html" title="Startseite">Downloads</a></li>
           <li><a href="contact.html">Impressum</a></li>
         </ul>
-        <p class="navbar-text navbar-right"> <a href="gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
+        <p class="navbar-text navbar-right"> <a href="http://www.gabors-mz-laden.de" class="navbar-link">Gabor´s MZ Laden</a>
         </p>
       </div>
     </div><!-- /.container -->
@@ -46,80 +37,105 @@
   </header>
 </div>
 <div class="container">
-  <h2>Downloads <button type="button" class="btn btn-primary float-right">Auswahl als PDF downloaden</button></h2>
-  <hr>
-  <table class="table table-hover table-striped">
-    <thead>
-      <tr>
-        <th class="checkRow"><input type="checkbox" value="ALL" id="ALL"></th>
-        <th class="active">
-          <select id="SELECT-BRAND">
+  <!--<ul class="breadcrumb">
+    <li><a href="index.html">Downloads</a></li>
+    <li><a href="index.html#MZ">Alle Hersteller</a></li>
+    <li><a href="index.html#250">Alle Typen</a></li>
+    <li><a href="index.html#250">Alle Bauteile</a></li>
+    <li class="active">Alle Dokumente</li>
+  </ul>-->
+  
+  <h2>Filter</h2>
+  <ul class="bvf-filter row">
+      <li class="col-xs-12 col-sm-6 col-md-3">
+        <label for="select-manufacturer">
+          <input type="text" readonly value="Alle Hersteller" name="selected-manufacturer">
+          <select tabindex="1" name="select-manufacturer" onchange="GetSelectedTextValue(this)">
             <option selected value=".tablerow">Alle Hersteller</option>
             <option value=".mz">MZ</option>
             <option value=".awe">AWE</option>
+        </select>
+        </label>
+      </li>
+      <li class="col-xs-12 col-sm-6 col-md-3">
+        <label for="select-type">
+          <input readonly="" type="text" value="Alle Typen" name="selected-type" id="selected-type">
+        <select tabindex="2" name="select-type" onchange="GetSelectedTextValue(this)">
+          <option selected value="type-all">Alle Typen</option>
+          <option>350</option>
+          <option>250</option>
+          <option>200</option>
+          <option>150</option>
+        </select>
+        </label>
+      </li>
+      <li class="col-xs-12 col-sm-6 col-md-3">
+        <label for="select-part">
+        <input readonly="" type="text" readonly value="Alle Bauteile" name="selected-part">
+        <select tabindex="3" name="select-part" onchange="GetSelectedTextValue(this)">
+          <option selected value="part-all">Alle Bauteile</option>
+          <option>Elektrik</option>
+          <option>Fahrgestell</option>
+          <option>Gehäuse</option>
+          <option>Motor</option>
+        </select>
+        </label>
+      </li>
+      <li class="col-xs-12 col-sm-6 col-md-3">
+        <label for="select-file">
+          <input readonly="" type="text" value="Alle Dokumente" name="selected-file">
+          <select tabindex="4" name="select-file" onchange="GetSelectedTextValue(this)">
+            <option selected value="file-all">Alle Dokumente</option>
+            <option value="file-tbl">Einstelltabelle</option>
+            <option value="file-dat">Datenblatt</option>
+            <option value="file-doc">Reparaturhandbuch</option>
+            <option value="file-lst">Ersatzteilliste</option>
+            <option value="file-exp">Explosivdarstellung</option>
           </select>
-        </th>
-        <th>Typ</th>
-        <th>Bauteil</th>
-        <th>
-          <select id="SELECT-FILE">
-            <option selected value=".tablerow">Alle Dokumente</option>
-            <option value=".tbl">Einstelltabelle</option>
-            <option value=".dat">Datenblatt</option>
-            <option value=".doc">Reparaturhandbuch</option>
-            <option value=".lst">Ersatzteilliste</option>
-            <option value=".exp">Explosivdarstellung</option>
-          </select>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="tablerow mz tbl">
-        <th class="checkRow"><input type="checkbox" value="#01"></th>
-        <td title="Motorradwerk Zschopau">MZ</td>
-        <td>350</td>
-        <td>Motor</td>
-        <td><a href="download.html">Einstelltabelle</a></td>
-      </tr>
-      <tr class="tablerow mz doc">
-        <th class="checkRow"><input type="checkbox" value="#01"></th>
-        <td title="Motorradwerk Zschopau">MZ</td>
-        <td>350</td>
-        <td>Motor</td>
-        <td><a href="download.html">Reparaturhandbuch</a></td>
-      </tr>
-      <tr class="tablerow mz dat">
-        <th class="checkRow"><input type="checkbox" value="#02" id="#02"></th>
-        <td title="Motorradwerk Zschopau">MZ</td>
-        <td>250</td>
-        <td>Gehäuse</td>
-        <td><a href="download.html">Datenblatt</a></td>
-      </tr>
-      <tr class="tablerow mz lst">
-        <th class="checkRow"><input type="checkbox" value="#01"></th>
-        <td title="Motorradwerk Zschopau">MZ</td>
-        <td>200</td>
-        <td>Fahrgestell</td>
-        <td><a href="download.html">Ersatzteilliste(1983)</a></td>
-      </tr>
-      <tr class="tablerow mz exp">
-        <th class="checkRow"><input type="checkbox" value="#01"></th>
-        <td title="Motorradwerk Zschopau">MZ</td>
-        <td>150</td>
-        <td>Elektrik</td>
-        <td><a href="download.html">Explosivdarstellung</a></td>
-      </tr>
-      <tr class="tablerow awe exp">
-        <th class="checkRow"><input type="checkbox" value="#01"></th>
-        <td title="Automobilwerk Eisenach">AWE</td>
-        <td>150</td>
-        <td>Elektrik</td>
-        <td><a href="download.html">Explosivdarstellung</a></td>
-      </tr>
-    </tbody>
-  </table>
+        </label>
+      </li>
+  </ul>
+  <hr/>
+  <h2>Dokumente [<span id="numberOfDocuments">000</span>]</h2>
+    <ul class="bvf-files">
+      <li class="tablerow" data-visible="1" data-manufacturer="MZ" data-type="350" data-part="Motor" data-file="Einstelltabelle">
+        <span class="manufacturer" title="Motorradwerk Zschopau">MZ</span>
+        <span class="type">350</span>
+        <span class="part">Motor</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Einstelltabelle</a></span>
+      </li>
+      <li class="tablerow" data-visible="1" data-manufacturer="MZ"  data-type="350" data-part="Motor" data-file="Reparaturhandbuch">
+        <span class="manufacturer" title="Motorradwerk Zschopau">MZ</span>
+        <span class="type">350</span>
+        <span class="part">Motor</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Reparaturhandbuch</a></span>
+      </li>
+      <li class="tablerow mz dat" data-visible="1" data-manufacturer="MZ"  data-type="250" data-part="Gehäuse" data-file="Datenblatt">
+        <span class="manufacturer" title="Motorradwerk Zschopau">MZ</span>
+        <span class="type">250</span>
+        <span class="part">Gehäuse</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Datenblatt</a></span>
+      </li>
+      <li class="tablerow mz lst" data-visible="1" data-manufacturer="MZ"  data-type="200" data-part="Fahrgestell" data-file="Ersatzteilliste">
+        <span class="manufacturer" title="Motorradwerk Zschopau">MZ</span>
+        <span class="type">200</span>
+        <span class="part">Fahrgestell</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Ersatzteilliste(1983)</a></span>
+      </li>
+      <li class="tablerow mz exp" data-visible="1" data-manufacturer="MZ"  data-type="150" data-part="Elektrik" data-file="Explosivdarstellung">
+        <span class="manufacturer" title="Motorradwerk Zschopau">MZ</span>
+        <span class="type">150</span>
+        <span class="part">Elektrik</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Explosivdarstellung</a></span>
+      </li>
+      <li class="tablerow awe exp" data-visible="1" data-manufacturer="AWE" data-type="150" data-part="Elektrik" data-file="Explosivdarstellung">
+        <span class="manufacturer" title="Automobilwerk Eisenach">AWE</span>
+        <span class="type">150</span>
+        <span class="part">Elektrik</span>
+        <span class="file"><a href="einstelltabelle.html" target="_blank">Explosivdarstellung</a></span>
+      </li>
+    </ul>
 </div><!--/.container-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/bvf.js"></script>
 </body>
 </html>
