--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top">
+  <nav class="navbar">
     <div class="container">
         <ul class="nav navbar-nav">
           <li><a href="index.html" title="Startseite">BVF</a></li>
@@ -36,7 +36,7 @@
     </div>
   </header>
 </div>
-<div class="container">
+<div class="content container">
   <h2>Impressum </h2>
   <div id="content-inner">
   <br><b>Impressum</b>
