--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top">
+  <nav class="navbar">
     <div class="container">
         <ul class="nav navbar-nav">
           <li><a href="index.html" title="Startseite">BVF</a></li>
@@ -36,7 +36,7 @@
     </div>
   </header>
 </div>
-<div class="container">
+<section class="content container">
   <!--<ul class="breadcrumb">
     <li><a href="index.html">Downloads</a></li>
     <li><a href="index.html#MZ">Alle Hersteller</a></li>
@@ -135,7 +135,7 @@
         <span class="file"><a href="einstelltabelle.html" target="_blank">Explosivdarstellung</a></span>
       </li>
     </ul>
-</div><!--/.container-->
+</section><!--/.container-->
   <script src="js/bvf.js"></script>
 </body>
 </html>
